// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<InformationItem /> check InformationItem renders properly when info is number 1`] = `
<div
  className="information-item"
>
  <p
    className="information-item__label"
  >
    test label
  </p>
  <p
    className="information-item__info"
  >
    1
  </p>
</div>
`;

exports[`<InformationItem /> check InformationItem renders properly when info is string 1`] = `
<div
  className="information-item"
>
  <p
    className="information-item__label"
  >
    test label
  </p>
  <p
    className="information-item__info"
  >
    test info
  </p>
</div>
`;

exports[`<InformationItem /> check InformationItem renders properly with default props 1`] = `
<div
  className="information-item"
>
  <p
    className="information-item__label"
  >
    test label
  </p>
  <p
    className="information-item__info"
  />
</div>
`;
